{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 9,
  "lineage": "4dfcfb5b-b918-7f35-f452-642d81a2b8ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:579463923820:instance/i-0abd3610befc3b1d7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abd3610befc3b1d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "weather-app-admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f76d760b42d181ae",
            "private_dns": "ip-10-0-1-47.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-13-51-171-108.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.171.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb3ce865f41b3d81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0e2eae2a7414a40",
            "tags": {
              "Environment": "development",
              "Name": "weatherapp-instance"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "weatherapp-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad9addec833d26c5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.admin_keypair",
            "aws_security_group.ssh_http",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_secretsmanager_secret.admin_key",
            "data.aws_secretsmanager_secret.client_key",
            "data.aws_secretsmanager_secret_version.admin_key_version",
            "data.aws_secretsmanager_secret_version.client_key_version"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:579463923820:internet-gateway/igw-001ee71323e323c95",
            "id": "igw-001ee71323e323c95",
            "owner_id": "579463923820",
            "tags": {
              "Name": "weatherapp-igw"
            },
            "tags_all": {
              "Name": "weatherapp-igw"
            },
            "vpc_id": "vpc-090435532fc9ce007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:579463923820:route-table/rtb-05ababe8293549827",
            "id": "rtb-05ababe8293549827",
            "owner_id": "579463923820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ee71323e323c95",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weatherapp-rt"
            },
            "tags_all": {
              "Name": "weatherapp-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090435532fc9ce007"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0127e6b0d439c00e3",
            "route_table_id": "rtb-05ababe8293549827",
            "subnet_id": "subnet-0d0e2eae2a7414a40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:579463923820:security-group/sg-0ad9addec833d26c5",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad9addec833d26c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "weatherapp-sg",
            "name_prefix": "",
            "owner_id": "579463923820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weatherapp-sg"
            },
            "tags_all": {
              "Name": "weatherapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090435532fc9ce007"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:579463923820:subnet/subnet-0d0e2eae2a7414a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0e2eae2a7414a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "579463923820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weatherapp-subnet"
            },
            "tags_all": {
              "Name": "weatherapp-subnet"
            },
            "vpc_id": "vpc-090435532fc9ce007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:579463923820:vpc/vpc-090435532fc9ce007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00251492d59f2d9f8",
            "default_route_table_id": "rtb-0f73ae8bda5e97823",
            "default_security_group_id": "sg-0d9ef873f3d35e801",
            "dhcp_options_id": "dopt-0aaa84374b1f3879d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090435532fc9ce007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f73ae8bda5e97823",
            "owner_id": "579463923820",
            "tags": {
              "Name": "weatherapp-vpc"
            },
            "tags_all": {
              "Name": "weatherapp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}